Correction: unlock settings navbar item on mobile

--- a/resources/sass/styles/components/navbar.scss
+++ b/resources/sass/styles/components/navbar.scss
@@ -69,8 +69,7 @@
 .myNavbar .p-menuitem:nth-child(5) .p-menuitem-link,
 .myNavbar .p-menuitem:nth-child(6) .p-menuitem-link,
 .myNavbar .p-menuitem:nth-child(7) .p-menuitem-link,
-.myNavbar .p-menuitem:nth-child(9) .p-menuitem-link,
-.myNavbar .p-menuitem:nth-child(10) .p-menuitem-link {
+.myNavbar .p-menuitem:nth-child(9) .p-menuitem-link {
     opacity: $disabled-item-opacity;
     cursor: $disabled-item-cursor;
 }
